<resources>
    <string name="app_name">Adam</string>

    <!--Halaman Login-->
    <string name="login_title">Welcome To Adam</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Go To Register</string>

    <!--Halaman Register-->
    <string name="register_title">Register To Adam</string>
    <string name="register_email">Email</string>
    <string name="register_name">Full Name</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register_register">Register</string>
    <string name="register_login">Back To Login</string>
    <string-array name="role">
        <item>Warga</item>
        <item>Polisi</item>
    </string-array>

    <!--Halaman Polisi-->
    <string name="polisi_laporan">Laporan</string>
    <string name="polisi_edit_akun">Edit Akun</string>

    <!--Halaman Warga-->
    <string name="warga_hotline_title">Hotline Surabaya</string>
    <string name="warga_hotline_polisi_text">Hubungi Layanan Polisi</string>
    <string name="warga_hotline_polisi_number">Call 110</string>
    <string name="warga_hotline_pemadam_text">Hubungi Layanan Pemadam Kebakaran</string>
    <string name="warga_hotline_pemadam_number">Call 113</string>
    <string name="warga_hotline_sar_text">Hubungi Layanan SAR/BASARNAS</string>
    <string name="warga_hotline_sar_number">Call 115</string>
    <string name="warga_hotline_ambulan_text">Hubungi Layanan Ambulans</string>
    <string name="warga_hotline_ambulan_number">Call 118</string>
    <string name="warga_hotline_listrik_text">Hubungi Layanan Perbaikan Listrik</string>
    <string name="warga_hotline_listrik_number">Call 123</string>

    <!--Template -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="laporan_kategori">
        <item>Kecelakaan Lalu Lintas</item>
        <item>Kebakaran</item>
        <item>Pencurian</item>
        <item>Orang Hilang</item>
        <item>Kekerasan dan Penggunaan Senjata Tajam</item>
        <item>Lain-lain</item>
    </string-array>
</resources>