<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/register_btRegister"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/color3"
        android:text="@string/register_register"
        android:textColor="@color/color5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_spRole" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/register_title"
        android:textColor="@color/color3"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_etNama"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/layout_rounded"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/register_etEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_rounded"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_etNama" />

    <EditText
        android:id="@+id/register_etPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_rounded"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_etEmail" />

    <EditText
        android:id="@+id/register_etConfirm"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_rounded"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/register_confirm"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_etPassword" />

    <Spinner
        android:id="@+id/register_spRole"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_rounded"
        android:backgroundTint="@color/white"
        android:entries="@array/role"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_etConfirm" />

    <Button
        android:id="@+id/register_btLogin"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/color1"
        android:text="@string/register_login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>